2007-10-23  Akim Demaille  <demaille@gostai.com>

	Work again with src=build.
	* src/userver-package-info.cc: Help it to find src/config.h, not
	libport/config.h.

2007-10-23  mefyl  <mefyl@lrde.epita.fr>

	Add warnings on alias definition and use.
	* src/ucommand.cc: Warn on alias definition.
	* src/uvariablename.cc: Warn on alias use.

2007-10-22  Akim Demaille  <akim.demaille@free.fr>

	.
	* configure.ac: Fix package full name.
	* src/package-info.cc: Rename as...
	* src/userver-package-info.cc: this.
	* src/Makefile.am: Adjust.

2007-10-22  Akim Demaille  <akim.demaille@free.fr>

	Move doxumentation.
	* src/userver.cc: from here.
	* include/kernel/userver.hh: to there.

2007-10-22  Akim Demaille  <akim.demaille@free.fr>

	package_info can be static.
	* include/kernel/userver.hh, src/package-info.cc
	(UServer::package_info): Make it static.

2007-10-22  Akim Demaille  <demaille@gostai.com>

	Use libport's package_info.
	* include/kernel/userver.hh (package_info): New member function.
	* src/package-info.cc: Implement this function.
	* src/userver.cc: No longer include package-info.hh.

2007-10-22  Akim Demaille  <demaille@gostai.com>

	PackageInfo.
	* include/kernel/userver.hh, src/userver.cc (package_rev)
	(package_rev): Remove since the names are ugly as they can be,
	and it's not the interface we want anyway (gosh, *please*, use
	accessors, not attributes!).
	If needed, we will provide the server with a means to return
	its package info.  This is going to end into libport...
	* src/package-info.hh, src/package-info.cc: New.
	* src/Makefile.am: Adjust.

2007-10-20  Akim Demaille  <akim.demaille@free.fr>

	We fail no 1.x tests.
	* tests-local.mk: Update.

2007-10-19  Akim Demaille  <akim.demaille@free.fr>

	static is also on rvalues.
	* src/parser/bison/ugrammar.y: Support it.
	* tests-local.mk: Remove variable-qualifiers.chk.

2007-10-19  Akim Demaille  <akim.demaille@free.fr>

	Style changes.
	* src/uconnection.cc: here.
