@@ -1129,6 +1129,24 @@ instruction:
       memcheck(up, $$, $3, $5, $7);
     }
 
+/*
+ *  This loop keyword can't be converted to a for, since it would
+ *  cause and ambiguity in the language. Consider this line:
+ *
+ *      for (42);
+ *
+ *  It could be either:
+ *
+ *      for (42)
+ *        ;
+ *
+ *  i.e, while 42 is true execute the empty instruction, either:
+ *
+ *      for
+ *        42;
+ *
+ *  i.e. execute "42"  forever, with 42 being parenthesized.
+ */
   | "loop" taggedcommand %prec CMDBLOCK {
 
       $$ = new UCommand_LOOP(@$, $2);
